# sudoku-dioxus

./: Cargo.toml  Dioxus.toml  dxtw.sh
src/: main.rs  styles.css.old  styles.tw4.base.css  styles.tw4.css  styles.tw4.css.old  sudoku.rs  tailwind.css
src/components/: app.rs  board.rs  cell.rs  controls.rs  mod.rs  numpad.rs  styles_tw4.rs  themes.rs
